# skulk-weights-publisher

./: .gitignore  404.html  CLAUDE.md  README.md  index.html  models.yaml  pyproject.toml  requirements.txt  sitemap.xml
.github/workflows/: docs.yml  publish.yml
.husky/: pre-commit
assets/css/: styles.2c920404.css
assets/js/: 0ffd1631.04d989e9.js  0ffd1631.10af0558.js  0ffd1631.15b7a0ee.js  0ffd1631.30d16f06.js  0ffd1631.665465ed.js  0ffd1631.82582502.js  0ffd1631.83759aa0.js  0ffd1631.c16004ec.js  0ffd1631.f627e8fd.js  0ffd1631.fa6c3498.js  1414cf7e.3a20e5da.js  1414cf7e.5161271e.js  1414cf7e.575f75ee.js  1414cf7e.73b061b0.js  1414cf7e.806f28e8.js  154273d6.041ab6b2.js  154273d6.32958b68.js  154273d6.85ebf2ad.js  154273d6.d5020278.js  154273d6.ed1b8ff9.js  1a9ffbc7.352292f3.js  1a9ffbc7.3ed8a9ff.js  1a9ffbc7.919728c6.js  1a9ffbc7.a9dfc215.js  1a9ffbc7.b8d763db.js  1a9ffbc7.c87bb452.js  237.87a194a2.js  24f328e1.5522166b.js  24f328e1.67e46234.js  24f328e1.6f5f5bce.js  24f328e1.7d10418b.js  24f328e1.974fc59c.js  24f328e1.a26125a9.js  24f328e1.c6ecb853.js  2895034b.0f405b9f.js  2895034b.3d2f385a.js  2895034b.44f3098a.js  2895034b.992e89d6.js  2895034b.ac23e171.js  2a5e5004.9f1fe804.js  (+209 more)
concepts/assistant-models/: index.html
concepts/catalog/: index.html
concepts/catalogue/: index.html
concepts/how-skulk-works/: index.html
concepts/publishing-lifecycle/: index.html
concepts/safety-model/: index.html
concepts/vindexes/: index.html
docs/: operator-setup.md
guides/add-catalog-entry/: index.html
guides/add-catalogue-entry/: index.html
guides/development/: index.html
guides/first-publish/: index.html
guides/gemma4-assistant/: index.html
guides/install/: index.html
guides/mtp-sidecar/: index.html
guides/runner-setup/: index.html
guides/skulk-ui/: index.html
guides/vision-sidecar/: index.html
previews/chore-docs-pass-and-reland-find-gui/: 404.html  index.html  sitemap.xml
previews/chore-foxlight-docs-pointer/: 404.html  index.html  sitemap.xml
previews/docs-full-sweep-and-screenshots/: 404.html  index.html  sitemap.xml
previews/docs-readme-mtp-table/: 404.html  index.html  sitemap.xml
previews/docs-readme-reality/: 404.html  index.html  sitemap.xml
quickstart/: index.html
scripts/: doctor.sh  manifest.py  publish-vindex.sh  publish-weights.sh
tests/: test_card_publish.py  test_catalog_adder.py  test_catalogue.py  test_cli.py  test_collection_publish.py  test_manifest.py  test_model_card.py  test_mtp_extractor.py  test_publisher.py  test_server.py  test_vision_extractor.py
troubleshooting/: index.html
ui/: eslint.config.js  index.html  package.json  tsconfig.app.json  tsconfig.node.json  vite.config.ts  vitest.config.ts
website/: docusaurus.config.js  package-lock.json  package.json  sidebars.js
(+1947 files in other folders)
