[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "skulk-vindex-publisher"
version = "0.1.0"
description = "Build, validate, and publish LARQL vindexes for Skulk."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "huggingface_hub>=1.0.0,<2",
  "PyYAML>=6.0.2,<7",
]

[project.optional-dependencies]
dev = [
  "basedpyright>=1.29.4",
  "pytest>=8.3.5",
  "ruff>=0.11.13",
  "types-PyYAML>=6.0.12.20250516",
]

[project.scripts]
skulk-vindex = "skulk_vindex_publisher.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
skulk_vindex_publisher = ["catalogues/*.yaml"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.basedpyright]
include = ["src", "tests"]
pythonVersion = "3.11"
typeCheckingMode = "standard"
reportMissingTypeStubs = false
