[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "skulk-weights-publisher"
version = "0.1.0"
description = "Build and publish weight artifacts for Skulk."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "huggingface_hub>=1.0.0,<2",
  "PyYAML>=6.0.2,<7",
]

[project.optional-dependencies]
# Required for real MTP sidecar extraction (not needed for dry-run or vindex publication).
# mlx requires macOS (Apple Silicon); Linux runners cannot perform real MTP extraction.
mtp = [
  "safetensors>=0.4",
  "numpy>=1.26",
  "mlx>=0.22; sys_platform == 'darwin' and platform_machine == 'arm64'",
]
dev = [
  "basedpyright>=1.29.4",
  "pytest>=8.3.5",
  "ruff>=0.11.13",
  "types-PyYAML>=6.0.12.20250516",
  # Also install [ui] extras in dev so the server module typechecks.
  "fastapi>=0.110",
  "uvicorn[standard]>=0.29",
]
ui = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.29",
  # MTP extraction deps — skulk-ui exists to publish MTP sidecars.
  "safetensors>=0.4",
  "numpy>=1.26",
  "mlx>=0.22; sys_platform == 'darwin' and platform_machine == 'arm64'",
]

[project.scripts]
skulk-weights = "skulk_weights_publisher.cli:main"
skulk-ui      = "skulk_weights_publisher.server:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
skulk_weights_publisher = ["catalogues/*.yaml"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.basedpyright]
include = ["src", "tests"]
pythonVersion = "3.11"
typeCheckingMode = "standard"
reportMissingTypeStubs = false
